--- a/app/assets/stylesheets/_products-page.scss
+++ b/app/assets/stylesheets/_products-page.scss
@@ -5,7 +5,7 @@
 
 .products-grid__item{
     position: relative;
-    overflow: hidden;
+    //overflow: hidden;
     display: block;
     border: 1px solid transparent;
     margin: 10px 0;
