--- a/app/assets/stylesheets/_product.scss
+++ b/app/assets/stylesheets/_product.scss
@@ -153,7 +153,7 @@
     width:  100%;
     color: #fff;
     font-size: 14px;
-    background: #CCCCCC;
+    background: #53b165;
     padding: 15px 20px;
     border: none;
     box-shadow: none;
